--- a/styles.css
+++ b/styles.css
@@ -1,156 +1,142 @@
 @import url(http://fonts.googleapis.com/css?family=Montserrat:400,700);
-
-body{
-color: #555;
-margin: 0;
-
-font-family: 'Montserrat', sans-serif;
+body {
+  color: #555;
+  margin: 0;
+  font-family: "Montserrat", sans-serif;
 }
 
-#header{
-background-color: #1abc9c;
-height: 150px;
-line-height: 150px;
+#header {
+  background-color: #1abc9c;
+  height: 150px;
+  line-height: 150px;
 }
 
-#header a{
-color: white;
-text-decoration: none;
-text-transform: uppercase;
-letter-spacing: 0.1em;
+#header a {
+  color: white;
+  text-decoration: none;
+  text-transform: uppercase;
+  letter-spacing: 0.1em;
 }
 
-#header a:hover{
-color: #222;
+#header a:hover {
+  color: #222;
 }
 
-#header-title{
-display: block;
-float: left;
-font-size: 20px;
-font-weight: bold;
+#header-title {
+  display: block;
+  float: left;
+  font-size: 20px;
+  font-weight: bold;
 }
 
-
-#header-nav{
-display: block;
-float: right;
-margin-top: 0;
+#header-nav {
+  display: block;
+  float: right;
+  margin-top: 0;
 }
 
-#header-nav li{
-display: inline;
-padding-left: 20px;
+#header-nav li {
+  display: inline;
+  padding-left: 20px;
 }
 
-.container{
-max-width: 1000px;
-margin: 0 auto;
+.container {
+  max-width: 1000px;
+  margin: 0 auto;
 }
-
 
 /*  footer */
- 
-#footer{
-background-color: #2f2f2f;
-padding: 20px 0;
+#footer {
+  background-color: #2f2f2f;
+  padding: 20px 0;
 }
 
-.column{
-min-width: 300px;
-display: inline-block;
-vertical-align: bottom;
+.column {
+  min-width: 300px;
+  display: inline-block;
+  vertical-align: bottom;
 }
 
-#footer h4{
-color: white;
-text-transform: uppercase;
-letter-spacing: 0.1em;
+#footer h4 {
+  color: white;
+  text-transform: uppercase;
+  letter-spacing: 0.1em;
 }
 
-#footer p{
-color: white;
+#footer p {
+  color: white;
 }
 
 /* for all a */
-a{
-color: #1abc9c;
-text-decoration: none;
+a {
+  color: #1abc9c;
+  text-decoration: none;
 }
 
-
-a:hover{
-color: #f6a623;
+a:hover {
+  color: #f6a623;
 }
-
 
 /* Content*/
-
-.post{
-max-width: 800px;
-margin: 0 auto;
-padding: 60px 0;
+.post {
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 60px 0;
 }
 
-.post-author img{
-width: 100px;
-height: 100px;
-vertical-align: middle;
+.post-author img {
+  width: 100px;
+  height: 100px;
+  vertical-align: middle;
 }
 
-.post-author span{
-margin-left: 16px;
+.post-author span {
+  margin-left: 16px;
 }
 
-.post-date{
-color: #D2D2D2;
-
-font-size: 14px;
-font-weight: bold;
-text-transform: uppercase;
-letter-spacing: 0.1em;
+.post-date {
+  color: #D2D2D2;
+  font-size: 14px;
+  font-weight: bold;
+  text-transform: uppercase;
+  letter-spacing: 0.1em;
 }
 
-h1,h2,h3,h4{
-color: black;
+h1, h2, h3, h4 {
+  color: black;
 }
 
-p{
-line-height: 1.5;
+p {
+  line-height: 1.5;
 }
 
-.post-container{
-background-image: url(Wissenschaft-junges-Sonnensystem_xl.jpg);
+.post-container {
+  background-image: url(Wissenschaft-junges-Sonnensystem_xl.jpg);
 }
 
-.post-container:nth-child(even)
-{
-background-color: #f2f2f2;
+.post-container:nth-child(even) {
+  background-color: #f2f2f2;
 }
-
 
 /*  about page */
-
-.post, .about{
-max-width: 800px;
-margin: 0 auto;
-padding: 60px 0;
+.post, .about {
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 60px 0;
 }
 
-
-.about-author img{
-width: 100px;
-height: 100px;
-vertical-align: middle;
+.about-author img {
+  width: 100px;
+  height: 100px;
+  vertical-align: middle;
 }
 
-
-.about{
-text-align: center;
+.about {
+  text-align: center;
 }
 
 .img-circle {
-border-radius: 50%;
+  border-radius: 50%;
 }
 
 /* Blog Text*/
@@ -162,4 +148,4 @@ border-radius: 50%;
   height: 400px;
 }
 
-
+/*# sourceMappingURL=styles.css.map */
