--- a/styles.scss
+++ b/styles.scss
@@ -1,6 +1,7 @@
 @import url(http://fonts.googleapis.com/css?family=Montserrat:400,700);
 
 $primary-color: #555;
+$back-color: #1abc9c;
 
 body{
 color: $primary-color;
@@ -10,7 +11,7 @@ font-family: 'Montserrat', sans-serif;
 }
 
 #header{
-background-color: #1abc9c;
+background-color: $back-color;
 height: 150px;
 line-height: 150px;
 }
@@ -76,7 +77,7 @@ color: white;
 
 /* for all a */
 a{
-color: #1abc9c;
+color: $back-color;
 text-decoration: none;
 }
 
