--- a/styles.scss
+++ b/styles.scss
@@ -2,50 +2,44 @@
 
 $primary-color: #555;
 $back-color: #1abc9c;
+$back-color_footer: #1abc9c;
+$primary-height: 150px;
+
 
 body{
 color: $primary-color;
 margin: 0;
-
 font-family: 'Montserrat', sans-serif;
 }
-
 #header{
 background-color: $back-color;
-height: 150px;
-line-height: 150px;
+height: $primary-height;
+line-height: $primary-height;
 }
-
 #header a{
 color: white;
 text-decoration: none;
 text-transform: uppercase;
 letter-spacing: 0.1em;
 }
-
 #header a:hover{
 color: #222;
 }
-
 #header-title{
 display: block;
 float: left;
 font-size: 20px;
 font-weight: bold;
 }
-
-
 #header-nav{
 display: block;
 float: right;
 margin-top: 0;
 }
-
 #header-nav li{
 display: inline;
 padding-left: 20px;
 }
-
 .container{
 max-width: 1000px;
 margin: 0 auto;
@@ -53,109 +47,85 @@ margin: 0 auto;
 
 
 /*  footer */
- 
 #footer{
-background-color: #2f2f2f;
+background-color: $back-color_footer;
 padding: 20px 0;
 }
-
 .column{
 min-width: 300px;
 display: inline-block;
 vertical-align: bottom;
 }
-
 #footer h4{
 color: white;
 text-transform: uppercase;
 letter-spacing: 0.1em;
 }
-
 #footer p{
 color: white;
 }
-
 /* for all a */
 a{
 color: $back-color;
 text-decoration: none;
 }
-
-
 a:hover{
 color: #f6a623;
 }
 
 
 /* Content*/
-
 .post{
 max-width: 800px;
 margin: 0 auto;
 padding: 60px 0;
 }
-
 .post-author img{
 width: 100px;
 height: 100px;
 vertical-align: middle;
 }
-
 .post-author span{
 margin-left: 16px;
 }
-
 .post-date{
 color: #D2D2D2;
-
 font-size: 14px;
 font-weight: bold;
 text-transform: uppercase;
 letter-spacing: 0.1em;
 }
-
 h1,h2,h3,h4{
 color: black;
 }
-
 p{
 line-height: 1.5;
 }
-
 .post-container{
-background-image: url(Wissenschaft-junges-Sonnensystem_xl.jpg);
+background-image: url(pic/Wissenschaft-junges-Sonnensystem_xl.jpg);
 }
-
 .post-container:nth-child(even)
 {
 background-color: #f2f2f2;
 }
 
-
 /*  about page */
-
 .post, .about{
 max-width: 800px;
 margin: 0 auto;
 padding: 60px 0;
 }
-
-
 .about-author img{
 width: 100px;
 height: 100px;
 vertical-align: middle;
 }
-
-
 .about{
 text-align: center;
 }
-
 .img-circle {
 border-radius: 50%;
 }
-
 /* Blog Text*/
 .card {
   background-color: white;
