--- a/styles.css
+++ b/styles.css
@@ -10,14 +10,12 @@ body {
   height: 150px;
   line-height: 150px;
 }
-
 #header a {
   color: white;
   text-decoration: none;
   text-transform: uppercase;
   letter-spacing: 0.1em;
 }
-
 #header a:hover {
   color: #222;
 }
@@ -34,15 +32,9 @@ body {
   float: right;
   margin-top: 0;
 }
-
 #header-nav li {
   display: inline;
   padding-left: 20px;
-}
-
-.container {
-  max-width: 1000px;
-  margin: 0 auto;
 }
 
 /*  footer */
@@ -50,30 +42,19 @@ body {
   background-color: #1abc9c;
   padding: 20px 0;
 }
-
-.column {
-  min-width: 300px;
-  display: inline-block;
-  vertical-align: bottom;
-}
-
 #footer h4 {
   color: white;
   text-transform: uppercase;
   letter-spacing: 0.1em;
 }
-
 #footer p {
   color: white;
 }
-
-/* for all a */
-a {
+#footer a {
   color: #1abc9c;
   text-decoration: none;
 }
-
-a:hover {
+#footer a:hover {
   color: #f6a623;
 }
 
@@ -102,14 +83,6 @@ a:hover {
   letter-spacing: 0.1em;
 }
 
-h1, h2, h3, h4 {
-  color: black;
-}
-
-p {
-  line-height: 1.5;
-}
-
 .post-container {
   background-image: url(pic/Wissenschaft-junges-Sonnensystem_xl.jpg);
 }
@@ -123,6 +96,19 @@ p {
   max-width: 800px;
   margin: 0 auto;
   padding: 60px 0;
+}
+.post a, .about a {
+  color: #1abc9c;
+  text-decoration: none;
+}
+.post a:hover, .about a:hover {
+  color: #f6a623;
+}
+.post h1, .post h2, .post h3, .post h4, .about h1, .about h2, .about h3, .about h4 {
+  color: black;
+}
+.post p, .about p {
+  line-height: 1.5;
 }
 
 .about-author img {
@@ -146,6 +132,30 @@ p {
   margin-top: 20px;
   width: 200px;
   height: 400px;
+}
+.card a {
+  color: #1abc9c;
+  text-decoration: none;
+}
+.card a:hover {
+  color: #f6a623;
+}
+.card h1, .card h2, .card h3, .card h4 {
+  color: black;
+}
+.card p {
+  line-height: 1.5;
+}
+
+.container {
+  max-width: 1000px;
+  margin: 0 auto;
+}
+
+.column {
+  min-width: 300px;
+  display: inline-block;
+  vertical-align: bottom;
 }
 
 /*# sourceMappingURL=styles.css.map */
