--- a/styles.css
+++ b/styles.css
@@ -37,7 +37,6 @@ body {
   padding-left: 20px;
 }
 
-/*  footer */
 #footer {
   background-color: #1abc9c;
   padding: 20px 0;
@@ -53,9 +52,6 @@ body {
 #footer a {
   color: #1abc9c;
   text-decoration: none;
-}
-#footer a:hover {
-  color: #f6a623;
 }
 
 /* Content*/
@@ -125,29 +121,21 @@ body {
   border-radius: 50%;
 }
 
-/* Blog Text*/
 .card {
-  background-color: white;
-  padding: 20px;
-  margin-top: 20px;
-  width: 200px;
-  height: 400px;
-}
-.card a {
-  color: #1abc9c;
-  text-decoration: none;
-}
-.card a:hover {
-  color: #f6a623;
-}
-.card h1, .card h2, .card h3, .card h4 {
-  color: black;
-}
-.card p {
-  line-height: 1.5;
+  /* Add shadows to create the "card" effect */
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
+  background-color: #CFCFCF;
 }
 
+/* On mouse-over, add a deeper shadow */
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 255, 0.7);
+}
+
+/* Add some padding inside the card container */
 .container {
+  padding: 2px 16px;
   max-width: 1000px;
   margin: 0 auto;
 }
