--- a/styles.scss
+++ b/styles.scss
@@ -43,7 +43,6 @@ font-weight: bold;
 		padding-left: 20px;
 	}
 }
-/*  footer */
 #footer{
 	background-color: $back-color_footer;
 	padding: 20px 0;
@@ -62,9 +61,6 @@ font-weight: bold;
 	a{
 		color: $back-color;
 		text-decoration: none;
-	}
-	a:hover{
-		color: #f6a623;
 	}
 }
 /* Content*/
@@ -127,31 +123,27 @@ text-align: center;
 .img-circle {
 border-radius: 50%;
 }
-/* Blog Text*/
-.card {
-  background-color: white;
-  padding: 20px;
-  margin-top: 20px;
-  width: 200px;
-  height: 400px;
- a{
-	color: $back-color;
-	text-decoration: none;
-  }
- a:hover{
-	color: #f6a623;
- }
 
- h1,h2,h3,h4{
-	color: black;
- }
- p{
-	line-height: 1.5;
- }
+
+.card {
+  /* Add shadows to create the "card" effect */
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  background-color: #CFCFCF;
 }
 
+/* On mouse-over, add a deeper shadow */
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,255,0.7);
+}
+
+/* Add some padding inside the card container */
+.container {
+  
+}
 
 .container{
+padding: 2px 16px;
 max-width: 1000px;
 margin: 0 auto;
 }
