--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 @import url(http://fonts.googleapis.com/css?family=Montserrat:400,700);
 body {
+  background-color: white;
   color: #555;
   margin: 0;
   font-family: "Montserrat", sans-serif;
@@ -37,21 +38,14 @@ body {
   padding-left: 20px;
 }
 
-#footer {
-  background-color: #1abc9c;
-  padding: 20px 0;
-}
-#footer h4 {
+.footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: black;
   color: white;
-  text-transform: uppercase;
-  letter-spacing: 0.1em;
-}
-#footer p {
-  color: white;
-}
-#footer a {
-  color: #1abc9c;
-  text-decoration: none;
+  text-align: center;
 }
 
 /* Content*/
@@ -91,7 +85,7 @@ body {
 .post, .about {
   max-width: 800px;
   margin: 0 auto;
-  padding: 60px 0;
+  padding: 95px 0;
 }
 .post a, .about a {
   color: #1abc9c;
@@ -133,15 +127,14 @@ body {
   box-shadow: 0 8px 16px 0 rgba(0, 0, 255, 0.7);
 }
 
-/* Add some padding inside the card container */
 .container {
   padding: 2px 16px;
-  max-width: 1000px;
+  max-width: 500px;
   margin: 0 auto;
 }
 
 .column {
-  min-width: 300px;
+  min-width: 1000px;
   display: inline-block;
   vertical-align: bottom;
 }
